--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+    "heroku-postbuild": "npm install pm2"
     "name": "tf2autobot",
     "version": "5.3.0",
     "description": "Fully automated TF2 trading bot advertising on www.backpack.tf using prices from www.prices.tf, Originally made by Nicklason.",
